test/error/MethodAbstractClassNormal.fu
public class Test
{
	protected abstract bool Run(); //ERROR: Abstract methods allowed only in an abstract class
}
